fixing the prob of fonts and gaps in b/w divs

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,10 @@ body{
 
 .logo{
 	float:right;
-	width:85px;
-	height:75px;
-	margin:5px 0px;
+	width:90px;
+	height:70px;
+	margin:0px;
+
 
 }
 .container{
@@ -21,9 +22,11 @@ body{
 
 h2{
 	font-size: 30px;
-	text-decoration:underline;
-	text-decoration-color:orange;
 	text-align:center; 
+}
+
+ins{
+	text-decoration-color: orange;
 }
 
 /*Header*/
@@ -31,25 +34,43 @@ header {
 	background:gray;
 	color: #ffffff;
 	margin:0;
-	padding:5px 10% 0 10%;
-	min-height:70px;
+	padding:15px 3% ;
+	min-height:40px;
 }
 
-header #branding img{
-	padding-right:10px;
-	padding-bottom:40px;
+#branding p,h1{
+	display:inline;
 }
-header a{
+
+#branding h1{
+	color: orange;
+	font-size: 1.8em;
+	letter-spacing: -0.5px; 
+}
+
+/* Nav Bar */
+nav{
+	background-color: orange;
+	width:100%;
+	height:35px;
+	padding:5px -8%;
+}
+
+nav a{
   text-decoration: none;
   font-size:18px;
+  color: #000000;
 }
 
-header li{
+nav a:hover{
+	color:#ffffff;
+}
+
+nav li{
   display:inline;
   padding-right: 10px;
-  
 }
-header button{
+nav button{
 	border-radius:25px;
 	float: right;
 	width: 80px;
@@ -57,31 +78,21 @@ header button{
 	border:2px solid red;
 	font-size:18px;
 	background-color:orange;
-	margin-right:10px;
+	margin-right: 10px;
 }
 
-header button:hover{
+nav button:hover{
   background-color:red;
   color:#ffffff;
-}
-header nav{
-	background-color: orange;
-	width:100%;
-	height:40px;
-}
-header a:hover{
-	color:#ffffff;
-}
-header #branding p{
-	margin:0;
-	padding:0;
-	text-align:inline;
 }
 
 /*showcase*/
 #showcase{
 	min-height:400px;
-	background:url('../showcase.jpg') no-repeat 0 -400px;
+	background:url('../images/showcase.png') no-repeat  -100px; 
+	background-size: cover;
+	background-position: center; 
+  /*background-size: 100% 100%; */
 	text-align: center; 
 	color: #ffffff;
 
@@ -89,7 +100,7 @@ header #branding p{
 
 #showcase h1{
 	margin-top:100px;
-	font-size:55px;
+	font-size:45px;
 	margin-bottom:10px;
 }
 
@@ -121,12 +132,13 @@ header #branding p{
 	background-color:orange;
 	color:#ffffff;
 	text-align:center;
-	margin-top:0px;
+	padding-bottom:20px;
+	padding-top: 1px;
 }
 
 #moreaboutus p{
 	font-size: 25px;
-	padding:25px 18% 0px 18%;
+	padding:1% 18% 0px 18%;
 }
 
 #moreaboutus button{
@@ -160,17 +172,36 @@ header #branding p{
 	padding:10px;
 }
 
+#services i{
+	color:orange;
+}
+
+.box1 p, .box2 p{
+	text-align: justify;
+}
+
+.box1 div, .box2 div{
+	float: left;
+	width: 50%;
+	box-sizing:border-box;
+	padding:10px 25px;
+}
+
+.intro p{
+	text-align: justify;
+}
+
 /*read-more*/
 #read-more{
 	min-height:200px;
 	background-color:orange;
 	color:#ffffff;
 	text-align:center;
-	margin-top:0px;
+
 }
 #read-more p{
-	font-size: 25px;
-	padding:25px 18% 0px 18%;
+	font-size: 20px;
+	padding:5px 18% 0px 18%;
 }
 
 #read-more button{
@@ -182,6 +213,8 @@ header #branding p{
 	color:orange;
 	background-color: #ffffff;
 	padding:10px 0 10px 0;
+	margin-bottom: 20px;
+
 }
 
 #read-more button:hover{
@@ -209,6 +242,7 @@ header #branding p{
 	height:33px;
 	border-radius:10px;
 	border:none;
+	margin-bottom: 20px;
 }
 
 #donate-us button:hover{
@@ -218,9 +252,10 @@ header #branding p{
 
 }
 /*map*/
-#map {
-      min-height: 400px;
-      width:80%;
+#map iframe {
+      min-height:300px;
+      width:100%;
+
 
  }
  
@@ -235,3 +270,14 @@ footer{
 }
  
 
+
+/*style setting for small device remaining*/
+
+/*Responsive Background*/
+@media screen and (max-width: 720px) {
+	.box1 div, .box2 div {
+	  float: none;
+	  width: 100%;
+	}
+  }
+  
